[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sPIV_PLIF"
version = "0.1.0"
description = "sPIV & PLIF image post-processing utilities and analysis tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "Elle Stark", email = "elle.stark@colorado.edu" }
]
keywords = ["sPIV", "PLIF", "image-processing", "analysis"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

# Runtime dependencies
dependencies = [
	"numpy>=1.24,<2.0",
	"scipy>=1.10",
	"matplotlib>=3.7",
	"pandas>=2.0",
	"opencv-python>=4.7",
	"h5py>=3.8"
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"black==24.3.0",
	"ruff>=0.0.284",
	"pre-commit>=3.4"
]
docs = [
	"sphinx>=6.0",
	"sphinx-rtd-theme>=1.1"
]

[project.urls]
"Homepage" = "https://github.com/ElleStark/sPIV_PLIF"
"Repository" = "https://github.com/ElleStark/sPIV_PLIF"

# Tell setuptools to find packages under `src/`
[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
postprocess = "sPIV_PLIF_postprocessing.cli:main"

